src/objects/Disaster__c.object
<CustomObject>
    <description>Captures disaster declaration</description>
    <fields>
        <fullName>Disaster_Deadline_Date__c</fullName>
        <label>Disaster Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disaster_Type__c</fullName>
        <label>Disaster Type</label>
        <picklist>
            <picklistValues>
                <fullName>Presidential</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EIDL_Number__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>EIDL Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>External_Id_DMS_Number__c</fullName>
        <description>Disaster Number from the ODA Disaster Management System</description>
        <label>Disaster Management System Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEMA_Disaster_Number__c</fullName>
        <label>FEMA Disaster Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Interest_Rate__c</fullName>
        <formula>Interest_Rates__r.High_Interest_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Rates__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relates the Disaster Declaration record to the appropriate interest rates record</description>
        <inlineHelpText>Relates the Disaster Declaration record to the appropriate interest rates record</inlineHelpText>
        <label>Interest Rates</label>
        <referenceTo>Interest_Rates__c</referenceTo>
        <relationshipLabel>Disaster</relationshipLabel>
        <relationshipName>Disaster</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Low_Interest_Rate__c</fullName>
        <formula>Interest_Rates__r.Low_Interest_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Low Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Physical_Number__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Physical Number</label>
        <type>AutoNumber</type>
    </fields>
    <label>Disaster</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Disaster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disaster</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>